@@ -102,7 +102,8 @@ Building Automatically
  patch
  m4
  g++
- libxext6-dev
+ libxext-dev
+ libxt-dev
  libc6-dev
  libglu1-mesa-dev 
  mesa-common-dev
